--- a/step09/views/layout.handlebars
+++ b/step09/views/layout.handlebars
@@ -40,7 +40,7 @@
 
   <!-- Google Sign-in library -->
   <meta name="google-signin-scope" content="https://www.googleapis.com/auth/spreadsheets">
-  <meta name="google-signin-client_id" content="{YOUR CLIENT ID}">
+  <meta name="google-signin-client_id" content="  <meta name="google-signin-client_id" content="964847913807-hv56gfu4gn1841uhhnho16le0n1i7d8o.apps.googleusercontent.com">">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
