--- a/step09/views/homescreen.handlebars
+++ b/step09/views/homescreen.handlebars
@@ -1,22 +1,3 @@
-<!--
-  Copyright 2016 Google, Inc.
-
-  Licensed to the Apache Software Foundation (ASF) under one or more contributor
-  license agreements. See the NOTICE file distributed with this work for
-  additional information regarding copyright ownership. The ASF licenses this
-  file to you under the Apache License, Version 2.0 (the "License"); you may not
-  use this file except in compliance with the License. You may obtain a copy of
-  the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-  License for the specific language governing permissions and limitations under
-  the License.
--->
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -24,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico" />
-  <title>Customer Order System</title>
+  <title>Retro Data Collector</title>
 
   <!-- Material Design Lite -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -54,6 +35,7 @@
         
         
         
+        
         <!-- Google Sign-in button -->
         <div id="profile" style="margin: 0 20px;">
           <b class="name"></b><br/>
@@ -61,8 +43,6 @@
         </div>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
       </div>
-      
-      
       
       <div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
     </header>
