--- a/step09/views/upsert.handlebars
+++ b/step09/views/upsert.handlebars
@@ -20,42 +20,22 @@
 <section class="mdl-grid">
   <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp">
     <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">Order details</h2>
+      <h2 class="mdl-card__title-text">Steps to be followed</h2>
     </div>
     <form method="post" action="/upsert">
       {{#if order}}
-      <input type="hidden" name="id" value="{{order.id}}" />
+      <input type="hidden" name="id" value="id" />
       {{/if}}
       <div class="mdl-card__supporting-text">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label block">
-          <input class="mdl-textfield__input" type="text" name="customerName" value="{{order.customerName}}">
-          <label class="mdl-textfield__label" for="sample1">Customer name...</label>
+          <input class="mdl-textfield__input" type="text" name="stepnumber" value="{{stepdata.stepnumber}}">
+          <label class="mdl-textfield__label" for="sample1">Step Number...</label>
         </div>
 
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label block">
-          <input class="mdl-textfield__input" type="text" name="productCode" id="productCode" value="{{order.productCode}}">
-          <label class="mdl-textfield__label" for="sample1">Product code...</label>
+          <input class="mdl-textfield__input" type="text" name="stepdata" id="stepdata" value="{{stepdata.stepdata}}">
+          <label class="mdl-textfield__label" for="sample1">Step information...</label>
         </div>
-
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label block">
-          <input class="mdl-textfield__input" type="text" pattern="[0-9]*" name="unitsOrdered" value="{{order.unitsOrdered}}">
-          <label class="mdl-textfield__label" for="sample1">Units ordered...</label>
-          <span class="mdl-textfield__error">Must be a positive integer</span>
-        </div>
-
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label block">
-          <input class="mdl-textfield__input" type="text" pattern="[0-9]*(\.[0-9]+)?" name="unitPrice" value="{{order.unitPrice}}">
-          <label class="mdl-textfield__label" for="sample1">Units price (USD)...</label>
-          <span class="mdl-textfield__error">Must be a positive number</span>
-        </div>
-
-        {{#if order}}
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label block">
-          <input class="mdl-textfield__input" type="text" pattern="PENDING|SHIPPED|DELIVERED" name="status" value="{{order.status}}">
-          <label class="mdl-textfield__label" for="sample1">Status...</label>
-          <span class="mdl-textfield__error">Must be one of PENDING, SHIPPED, or DELIVERED</span>
-        </div>
-        {{/if}}
       </div>
       <div class="mdl-card__actions">
         <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored mdl-button--raised">
