--- a/step09/views/index.handlebars
+++ b/step09/views/index.handlebars
@@ -49,6 +49,11 @@
         <i class="material-icons" role="presentation">add</i>
         <span class="visuallyhidden">Add</span>
       </a>
+       <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+          href="/sitelistinsert">
+        <i class="" role="presentation">Enter site list</i>
+        <span class="visuallyhidden">Add</span>
+      </a>
     </div>
   </section>
 
