--- a/step09/views/index.handlebars
+++ b/step09/views/index.handlebars
@@ -49,35 +49,40 @@
         <i class="material-icons" role="presentation">add</i>
         <span class="visuallyhidden">Add</span>
       </a>
+       <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+          href="/sitelistinsert">
+        <i class="" role="presentation">Enter site list</i>
+        <span class="visuallyhidden">Add</span>
+      </a>
     </div>
   </section>
 
   <!-- Show spreadsheets -->
-  <section id="spreadsheets"
-           class="mdl-cell mdl-cell--4-col relative">
-    <div class="mdl-list">
-      <div class="mdl-list__item">
-        <span class="mdl-list__item-primary-content mdl-layout-title">
-          Spreadsheets</span>
-        <span class="mdl-list__item-secondary-action">
-          <button class="mdl-button mdl-js-button mdl-button--raised
-                         mdl-js-ripple-effect mdl-button--colored"
-                  rel="create" type="button">Create</button>
-        </span>
-      </div>
-      {{#each spreadsheets}}
-      <div class="mdl-list__item">
-        <a class="mdl-list__item-primary-content"
-           href="https://docs.google.com/spreadsheets/d/{{id}}/edit"
-           target="_blank">{{name}}</a>
-        <span class="mdl-list__item-secondary-action">
-          <button class="mdl-button mdl-js-button mdl-button--raised
-                         mdl-js-ripple-effect"
-                  rel="sync" data-spreadsheetid="{{id}}"
-                  type="button">Sync</button>
-        </span>
-      </div>
-      {{/each}}
+<section id="spreadsheets"
+         class="mdl-cell mdl-cell--4-col relative">
+  <div class="mdl-list">
+    <div class="mdl-list__item">
+      <span class="mdl-list__item-primary-content mdl-layout-title">
+        Spreadsheets</span>
+      <span class="mdl-list__item-secondary-action">
+        <button class="mdl-button mdl-js-button mdl-button--raised
+                       mdl-js-ripple-effect mdl-button--colored"
+                rel="create" type="button">Create</button>
+      </span>
     </div>
-  </section>
+    {{#each spreadsheets}}
+    <div class="mdl-list__item">
+      <a class="mdl-list__item-primary-content"
+         href="https://docs.google.com/spreadsheets/d/{{id}}/edit"
+         target="_blank">{{name}}</a>
+      <span class="mdl-list__item-secondary-action">
+        <button class="mdl-button mdl-js-button mdl-button--raised
+                       mdl-js-ripple-effect"
+                rel="sync" data-spreadsheetid="{{id}}"
+                type="button">Sync</button>
+      </span>
+    </div>
+    {{/each}}
+  </div>
+</section>
 </div>
