--- a/step09/views/listfetcher.handlebars
+++ b/step09/views/listfetcher.handlebars
@@ -23,7 +23,7 @@ the License.
 			<h2 class="mdl-card__title-text">Enter the list of sites one URL per line</h2>
 		</div>
 		<form method="post" action="/savesites">
-			<textarea id="siteURL" name="siteURL" cols="36" rows="5" {{Siterecord.siteURL}}></textarea> 
+			<textarea id="siteURL" name="siteURL" cols="36" rows="5" {{Siterecords.siteURL}}></textarea> 
 			<div class="mdl-card__actions">
 				<button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored mdl-button--raised">
 					Submit
