edit delete done

--- a/step09/views/index.handlebars
+++ b/step09/views/index.handlebars
@@ -35,9 +35,9 @@
         <div class="mdl-card__actions">
           <a class="mdl-button mdl-button--colored mdl-js-button
                     mdl-js-ripple-effect"
-             href="/edit/{{id}}">Edit</a>
+             href="/edit/{{sitelisting}}">Edit</a>
           <a class="mdl-button mdl-js-button mdl-js-ripple-effect"
-             href="/delete/{{id}}">Delete</a>
+             href="/delete/{{sitelisting}}">Delete</a>
         </div>
       </div>
       {{/each}}
