--- a/step09/views/siteslist.handlebars
+++ b/step09/views/siteslist.handlebars
@@ -8,7 +8,7 @@
         </div>
         <div class="mdl-card__supporting-text">
           <table class="order-details">
-            <tr><th>Customer</th><td>{{SiterecordSiterecord.siteURL}}</td></tr>
+            <tr><th>Customer</th><td>{{Siterecord.siteURL}}</td></tr>
           </table>
         </div>
         <div class="mdl-card__actions">
