--- a/step09/views/sitelisttextaraea.handlebars
+++ b/step09/views/sitelisttextaraea.handlebars
@@ -29,7 +29,7 @@ the License.
 					Submit
 				</button>
 				<div class="mdl-tooltip" data-mdl-for="save site-list">
-					<strong>Bulk sasve site list and proceed to enter code</strong>
+					<strong>Bulk save site list and proceed to enter code</strong>
 				</div>
 				<a class="mdl-button mdl-js-button mdl-js-ripple-effect" href="/">Cancel</a>
 			</div>
