--- a/step09/views/codeupdate.handlebars
+++ b/step09/views/codeupdate.handlebars
@@ -20,7 +20,7 @@ the License.
 <section class="mdl-grid">
     <div class="mdl-cell mdl-cell--8-col mdl-card mdl-shadow--3dp">
         <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Enter your script in the text area below</h2>
+            <h2 class="mdl-card__title-text">Enter your script in the javascript area below</h2>
         </div>
         <form method="post" action="/savescript">
             <textarea name="scriptUsed" id="scriptUsed" cols="50" rows="10"{{Siterecords.scriptUsed}}>
