--- a/step09/views/sitelisttextaraea.handlebars
+++ b/step09/views/sitelisttextaraea.handlebars
@@ -20,7 +20,7 @@ the License.
 <section class="mdl-grid">
 	<div class="mdl-cell mdl-cell--8-col mdl-card mdl-shadow--3dp">
 		<div class="mdl-card__title">
-			<h2 class="mdl-card__title-text">Enter the list of sites one URL per line.  http is not needed.(e.g daniellamason.com)</h2>
+			<h2 class="mdl-card__title-text">Enter the list of sites one URL per line.  "http" or "www" is not needed.(e.g daniellamason.com)</h2>
 		</div>
 		<form method="post" action="/savesites">
 			<textarea id="siteURL" name="siteURL" cols="50" rows="10" {{Siterecords.siteURL}}></textarea>
